<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Category name"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />

    <Button
        android:id="@+id/btnDeleteCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Supprimer"
        android:backgroundTint="#D32F2F"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:layout_marginTop="8dp" />
</LinearLayout>