<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_user_name"
        android:title="User Name"
        android:enabled="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_password"
        android:title="Change Password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="Logout"
        app:showAsAction="never" />
</menu>
